<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6D6E70"
        android:minHeight="?attr/actionBarSize" >

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/title_service_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="26dp"
        android:text="@string/title_service"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/contents_service_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="3dp"
        android:text="@string/contents_service"
        android:textColor="#000000"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/service_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/lineframe" />

    <TextView
        android:id="@+id/title_privacy_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="26dp"
        android:text="@string/title_privacy"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/contents_privacy_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="18dp"
        android:lineSpacingExtra="3dp"
        android:text="@string/contents_privacy"
        android:textColor="#000000"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/privavcy_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/lineframe" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="326dp"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:background="#6D6E70"
        android:text="입력완료후 다음단계로" />

</LinearLayout>